--- a/addons/azure-cloud-node-manager/cloud-node-manager.yaml
+++ b/addons/azure-cloud-node-manager/cloud-node-manager.yaml
@@ -29,6 +29,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.26" }}
 {{ $version = "v1.26.8" }}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.27" }}
+{{ $version = "v1.27.1"}}
+{{ end }}
 {{ if not (eq $version "UNSUPPORTED") }}
 apiVersion: v1
 kind: ServiceAccount
