--- a/addons/csi/digitalocean/csi-driver.yaml
+++ b/addons/csi/digitalocean/csi-driver.yaml
@@ -33,7 +33,10 @@
 {{ $version = "v4.4.1"}}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.26" }}
-{{ $version = "v4.5.0"}}
+{{ $version = "v4.5.1"}}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.27" }}
+{{ $version = "v4.5.1"}} {/* 1.27 is technically 4.6+ */}
 {{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
