--- a/addons/csi/openstack/nodeplugin.yaml
+++ b/addons/csi/openstack/nodeplugin.yaml
@@ -28,6 +28,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.26" }}
 {{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.26.2"}}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.27" }}
+{{ $csiImage = "registry.k8s.io/provider-os/cinder-csi-plugin:v1.27.1"}}
+{{ end }}
 {{ if not (eq $csiImage "UNSUPPORTED") }}
 ---
 kind: DaemonSet
