--- a/pkg/resources/test/fixtures/deployment-openstack-1.24.0-openstack-cloud-controller-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.24.0-openstack-cloud-controller-manager-externalCloudProvider.yaml
@@ -38,7 +38,7 @@ spec:
         env:
         - name: SSL_CERT_FILE
           value: /etc/kubermatic/certs/ca-bundle.pem
-        image: docker.io/k8scloudprovider/openstack-cloud-controller-manager:v1.24.6
+        image: registry.k8s.io/provider-os/openstack-cloud-controller-manager:v1.24.6
         name: cloud-controller-manager
         resources:
           limits:
